# Conveyor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  documentation.md  pipeline.example.yaml  pipeline.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  pipeline.rs  runner.rs  ui.rs
