[package]
name = "conveyor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full"] }
