[package]
name = "conveyor"
version = "0.1.0"
edition = "2024"
authors = ["Sumant Sogikar <sumant1122@gmail.com>"]
description = "A lightweight, local-first CI/CD runner with a real-time TUI."
repository = "https://github.com/sumant1122/conveyor"
homepage = "https://github.com/sumant1122/conveyor"
license = "MIT"
keywords = ["ci", "cd", "pipeline", "tui", "rust"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full"] }
